Changed the response method

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
   <body>
     <h1>Hello ASS</h1>
     <h2>BITCH</h2>
+    <form method="POST" action="/example">
+      <input type="text" />
+      <button type="submit">Send</button>
+    </form>
   </body>
 </html>
