Moved to h file and also made the post request work while using html forms

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Hello ASS</h1>
     <h2>BITCH</h2>
     <form method="POST" action="/example">
-      <input type="text" />
+      <input type="text" name="key1" />
       <button type="submit">Send</button>
     </form>
   </body>
